--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/parser/sqlParser.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/main.test.js --require babel-register"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "jison": "^0.4.17"
   },
   "devDependencies": {
+    "jison": "^0.4.17",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
     "mocha": "^3.2.0"
   }
 }
