--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "jison": "^0.4.17"
   },
   "devDependencies": {
-    "jison": "^0.4.17",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
+    "benchmark": "^2.1.3",
+    "jison": "^0.4.17",
     "mocha": "^3.2.0"
   }
 }
