--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./dist/parser/sqlParser.js",
   "scripts": {
-    "test": "mocha test/main.test.js --require babel-register"
+    "test": "mocha test/main.test.js --require babel-register",
+    "benchmark": "node test/benchmark.js"
   },
   "repository": {
     "type": "git",
