--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "benchmark": "^2.1.3",
+    "debug": "^3.1.0",
     "jison": "^0.4.17",
     "mocha": "^3.2.0"
   }
