--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "./dist/parser/sqlParser.js",
   "scripts": {
-    "test": "make test",
-    "benchmark": "node test/benchmark.js"
+    "build": "jison -m js ./src/sqlParser.jison -o ./dist/parser/sqlParser.js && npm run build-concat",
+    "build-concat": "concat -o ./dist/parser/sqlParser.js ./dist/parser/sqlParser.js src/stringify.js src/suffix.js",
+    "postbuild": "npm run test:build",
+    "test:all": "mocha --require babel-register",
+    "test:build": "mocha 'test/*.test.js'",
+    "test:benchmark": "mocha test/benchmark.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +29,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "benchmark": "^2.1.3",
+    "concat": "^1.0.3",
     "debug": "^3.1.0",
     "jison": "^0.4.17",
     "mocha": "^3.2.0"
