fix: .travis.yml test.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "jison -m js ./src/sqlParser.jison -o ./dist/parser/sqlParser.js && npm run build-concat",
     "build-concat": "cat src/stringify.js src/suffix.js >> ./dist/parser/sqlParser.js",
     "postbuild": "npm run test:build",
+    "test": "npm run build",
     "test:all": "mocha --require babel-register",
-    "test:build": "mocha 'test/*.test.js'",
-    "test:benchmark": "mocha test/benchmark.js"
+    "test:build": "mocha --require babel-register 'test/*.test.js'",
+    "test:benchmark": "mocha --require babel-register test/benchmark.js"
   },
   "repository": {
     "type": "git",
