--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "jison -m js ./src/sqlParser.jison -o ./dist/parser/sqlParser.js && npm run build-concat",
     "build-concat": "minicat src/stringify.js src/suffix.js >> dist/parser/sqlParser.js",
-    "postbuild": "npm run test:build",
-    "test": "npm run build",
+    "test": "npm run test:build",
     "test:all": "mocha --require babel-register",
     "test:build": "mocha --require babel-register test/*.test.js",
     "test:benchmark": "mocha --require babel-register test/benchmark.js"
